Update Java, Gradle and JavaFX. Remove jar dependency with Maven Repo Dependency